[gd_scene load_steps=4 format=3 uid="uid://djj8ijgjt6kt1"]

[ext_resource type="Script" path="res://scenes/pin_appearance/PinAppearance.gd" id="1_whbb7"]
[ext_resource type="Texture2D" uid="uid://bhudxaskfiv5j" path="res://images/pin/base.png" id="2_5pj6d"]
[ext_resource type="Texture2D" uid="uid://4oel646oxp8s" path="res://images/pin/pin_ring_mk1.png" id="3_8owjm"]

[node name="PinAppearance" type="Node2D"]
script = ExtResource("1_whbb7")

[node name="SpriteBase" type="Sprite2D" parent="."]
texture = ExtResource("2_5pj6d")

[node name="SpriteRing" type="Sprite2D" parent="."]
texture = ExtResource("3_8owjm")

[node name="SpriteIcon" type="Sprite2D" parent="."]
